# twmailer

./: .gitignore  CMakeLists.txt  Makefile
client/: main.cpp
server/: main.cpp
server/auth/: AuthGuard.cpp  AuthGuard.h  BlackListHandler.cpp  BlackListHandler.h  CredentialsReader.cpp  CredentialsReader.h  LDAPConnector.cpp  LDAPConnector.h
server/command/: Command.h  CommandFactory.cpp  CommandFactory.h  CommanndPipeline.h  DTO.h  DeleteCommand.cpp  DeleteCommand.h  ListCommand.cpp  ListCommand.h  QuitCommand.cpp  QuitCommand.h  ReadCommand.cpp  ReadCommand.h  SendCommand.cpp  SendCommand.h
server/errors/: AttemptsExceeded.h  ConfigurationError.h  GotBanned.h  InternalServerError.h  IsBanned.h  Quit.h  WrongCredentials.h
server/exceptions/: NetworkError.h  QuitException.h  ValidationError.h
server/network/: ConnectionHandler.cpp  ConnectionHandler.h  ConnectionSocket.cpp  ConnectionSocket.h  ListeningSocket.cpp  ListeningSocket.h  RequestHandler.cpp  RequestHandler.h  SequentialHandler.cpp  SequentialHandler.h  Server.cpp  Server.h  Socket.cpp  Socket.h  UserContext.h
server/utils/: Environment.cpp  Environment.h  FileSystemUtils.h  Logger.h
server/visitor/: CommandVisitor.h  LoggingVisitor.cpp  LoggingVisitor.h  ValidationVisitor.cpp  ValidationVisitor.h  VisitorPipeline.cpp  VisitorPipeline.h
